# student_perfomance_test

./: LICENSE  Makefile  README.md  pyproject.toml
data/: students1.csv  students2.csv
src/: common_types.py  dto.py  files.py  logs.py  main.py  reports.py
tests/: conftest.py  test_main.py
