[project]
name = "log-reporter"
version = "0.1.0"
description = "Test project to create reports from logs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "faker>=37.4.2",
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "ruff>=0.12.5",
]

[tool.ruff]
line-length = 100
